Adapt implementation to process multiple drone images. (#8)
