# src/main/java/de/app/fivegla/controller/dto/response/ImageProcessingResponse.java
@@ -5,6 +5,8 @@ import lombok.Builder;
 import lombok.Getter;
 import lombok.Setter;
 
+import java.util.List;
+
 /**
  * Response for image processing.
  */
@@ -17,7 +19,7 @@ public class ImageProcessingResponse extends Response {
     /**
      * The oid of the image.
      */
-    @Schema(description = "The oid of the image.")
-    private String oid;
+    @Schema(description = "The oids of the images.")
+    private List<String> oids;
 
 }
